--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "devmpersonalproject",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "massive": "^5.1.3",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
@@ -17,5 +22,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "proxy": {
+    "/auth/callback": {
+      "target": "http://localhost:3040"
+    },
+    "/api": {
+      "target": "http://localhost:3040"
+    }
   }
 }
