--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "google-map-react": "^1.0.5",
     "massive": "^5.1.3",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
