--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "google-map-react": "^1.0.5",
+    "google-maps": "^3.3.0",
     "massive": "^5.1.3",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
