--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "google-map-react": "^1.0.5",
     "google-maps": "^3.3.0",
     "massive": "^5.1.3",
+    "node": "^10.7.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
