--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-number-format": "^3.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "twilio": "^3.18.0"
