--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "exphbs": "^1.2.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "google-map-react": "^1.0.5",
     "google-maps": "^3.3.0",
+    "google-maps-react": "^2.0.2",
     "massive": "^5.1.3",
     "node": "^10.7.0",
+    "nodemailer": "^4.6.7",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-form": "^0.1.4-beta6",
     "react-dom": "^16.4.1",
+    "react-form": "^3.5.6",
+    "react-google-map-street-view": "^1.1.0",
     "react-number-format": "^3.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
