--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-number-format": "^3.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "sendgrid": "^5.2.3",
     "twilio": "^3.18.0"
   },
   "scripts": {
