--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
+    "dropzone": "^5.5.1",
     "exphbs": "^1.2.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -20,6 +22,7 @@
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-form": "^0.1.4-beta6",
     "react-dom": "^16.4.1",
+    "react-dropzone": "^4.3.0",
     "react-form": "^3.5.6",
     "react-google-map-street-view": "^1.1.0",
     "react-number-format": "^3.5.0",
