--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "sendgrid": "^5.2.3",
+    "socket.io": "^2.1.1",
     "twilio": "^3.18.0"
   },
   "scripts": {
