--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "chance": "^1.0.16",
     "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "dropzone": "^5.5.1",
     "exphbs": "^1.2.0",
     "express": "^4.16.3",
@@ -15,9 +17,11 @@
     "google-map-react": "^1.0.5",
     "google-maps": "^3.3.0",
     "google-maps-react": "^2.0.2",
+    "jquery": "^3.3.1",
     "massive": "^5.1.3",
     "node": "^10.7.0",
     "nodemailer": "^4.6.7",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-form": "^0.1.4-beta6",
@@ -27,10 +31,13 @@
     "react-google-map-street-view": "^1.1.0",
     "react-number-format": "^3.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
+    "react-types": "^0.1.0",
     "sendgrid": "^5.2.3",
     "socket.io": "^2.1.1",
-    "twilio": "^3.19.0"
+    "twilio": "^3.19.0",
+    "twilio-chat": "^3.0.2",
+    "twilsock": "^0.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +51,8 @@
     },
     "/api": {
       "target": "http://localhost:3040"
-    }
+    },
+    "proxy":"http://localhost:3040"
+
   }
 }
