--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "chance": "^1.0.16",
+    "classnames": "^2.2.6",
     "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -17,6 +18,7 @@
     "google-map-react": "^1.0.5",
     "google-maps": "^3.3.0",
     "google-maps-react": "^2.0.2",
+    "http": "0.0.0",
     "jquery": "^3.3.1",
     "massive": "^5.1.3",
     "node": "^10.7.0",
@@ -52,7 +54,8 @@
     "/api": {
       "target": "http://localhost:3040"
     },
-    "proxy":"http://localhost:3040"
-
+    "/token": {
+      "target": "http://localhost:3040"
+    }
   }
 }
